--- a/W2D3_MVC-Views/src/main/resources/application.properties
+++ b/W2D3_MVC-Views/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/WEB-INF/
 
 # For Update and Delete method hidden inputs
-#spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.hiddenmethod.filter.enabled=true
